--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
-    <script src="./scripts/script.js"></script>
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -94,10 +94,10 @@
         </div>
       </section>
       <section class="content content__what">
-        <h3 class="content__name">Что снижает концентрацию внимания?</h3>
+        <h2 class="content__name">Что снижает концентрацию внимания?</h2>
         <div class="main__container main__container__what">
           <article>
-            <h4 class="content__title title-decor">Многозадачность</h4>
+            <h3 class="content__title title-decor">Многозадачность</h3>
             <p class="content__text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -132,19 +132,19 @@
           </article>
         </div>
       </section>
-      <section class="content content__how">
-        <h4 class="content__name">
+      <section class="content content__why">
+        <h2 class="content__name">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
-        </h4>
+        </h2>
         <div class="main__container">
           <article>
-            <h5 class="content__title title-decor">
+            <h3 class="content__title title-decor">
               5 простых (на самом деле не очень) советов
-            </h5>
-            <h6 class="content__title title-decor content__title-last">
+            </h3>
+            <h4 class="content__title title-decor content__title-last">
               Представьте небо и облака
-            </h6>
+            </h4>
             <p class="content__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -198,7 +198,7 @@
         </div>
       </section>
       <section class="gallery">
-        <h6 class="content__title title-decor">А можно в картинках?</h6>
+        <h3 class="content__title title-decor">А можно в картинках?</h3>
         <article class="image">
           <img
             class="image__list img__sunset"
