--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </p>
           </article>
           <article>
-            <h4 class="content__title title-decor">Еда</h4>
+            <h3 class="content__title title-decor">Еда</h3>
             <p class="content__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -119,7 +119,7 @@
             </p>
           </article>
           <article>
-            <h4 class="content__title title-decor">Гаджеты</h4>
+            <h3 class="content__title title-decor">Гаджеты</h3>
             <p class="content__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -142,7 +142,7 @@
             <h3 class="content__title title-decor">
               5 простых (на самом деле не очень) советов
             </h3>
-            <h4 class="content__title title-decor content__title-last">
+            <h4 class="content__title title-decor content__title-last content__title-none">
               Представьте небо и облака
             </h4>
             <p class="content__text">
@@ -157,7 +157,7 @@
             </p>
           </article>
           <article>
-            <h6 class="content__title title-decor">Включите музыку</h6>
+            <h4 class="content__title title-decor content__title-none">Включите музыку</h4>
             <p class="content__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -166,10 +166,10 @@
             </p>
           </article>
           <article>
-            <h6 class="content__title title-decor">Прогуляйтесь</h6>
+            <h4 class="content__title title-decor content__title-none">Прогуляйтесь</h4>
             <p class="content__text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              показал, что созерцание природы повышает концентрацию, в то время
+              <a class="content__link" href="#" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время
               как после просмотра городских пейзажей она наоборот понижается.
               Можно совместить прогулку с физическими упражнениями или бегом —
               так в мозг поступит ещё больше кислорода и он будет лучше
@@ -178,7 +178,7 @@
             </p>
           </article>
           <article>
-            <h6 class="content__title title-decor">Хорошо ешьте</h6>
+            <h4 class="content__title title-decor content__title-none">Хорошо ешьте</h4>
             <p class="content__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -187,7 +187,7 @@
             </p>
           </article>
           <article>
-            <h6 class="content__title title-decor">Читайте</h6>
+            <h4 class="content__title title-decor content__title-none">Читайте</h4>
             <p class="content__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -198,7 +198,7 @@
         </div>
       </section>
       <section class="gallery">
-        <h3 class="content__title title-decor">А можно в картинках?</h3>
+        <h2 class="content__title title-decor">А можно в картинках?</h2>
         <article class="image">
           <img
             class="image__list img__sunset"
